{
    "name": "GameControls",
    "maps": [
        {
            "name": "Spaceship",
            "id": "a5aa67cb-3209-4fd9-837c-19f64495c2f2",
            "actions": [
                {
                    "name": "Shot",
                    "type": "PassThrough",
                    "id": "33cb3cc7-572f-4849-844a-eb5a41136b99",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MoveForward",
                    "type": "PassThrough",
                    "id": "b6886db7-951d-4bdc-bbe1-da3a900518ed",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Rotate",
                    "type": "PassThrough",
                    "id": "12e196ef-eb1b-450d-895d-2428a0c6c831",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "c96b6d3c-094f-4cfc-aaa5-931a67c07fc2",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Shot",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e29fbb8b-a182-4c50-9cd6-d9e90ed826b3",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveForward",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f929e3ba-bc7e-48a5-8cc8-96cddb977bb6",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveForward",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "330365c7-8e3f-455e-a638-4320ba0d898b",
                    "path": "<Touchscreen>/primaryTouch",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveForward",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "Axis1",
                    "id": "d98b0f99-0805-4d1b-9464-38e154e3ad69",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotate",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "a76cba3b-1a53-4b31-a444-59b3f124bc0d",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotate",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "dbb1fc34-adc5-4f95-ae0a-e0b550d779d3",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotate",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Axis2",
                    "id": "78d48aae-e39f-4bc3-b1aa-d51265b8273c",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotate",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "44947e75-de99-42c4-bf1b-c44d8f47575b",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotate",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "1e219130-ac4f-425d-8317-231a249867c0",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotate",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "Game",
            "id": "06688c93-59be-4c98-b8a7-b6c6890a7197",
            "actions": [
                {
                    "name": "CloseGame",
                    "type": "Button",
                    "id": "cfb277f1-6c43-4c25-b95c-d171f63994c9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "39bd6aba-207d-49e3-8d62-6ac130848d67",
                    "path": "<Keyboard>/escape",
                    "interactions": "Tap",
                    "processors": "",
                    "groups": "",
                    "action": "CloseGame",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}